Creo el proyecto con la base del ejercicio 10

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">SanviPop</a>
-</nav>
+<sp-menu-top></sp-menu-top>
 
 <div class="container">
-  <sp-products-page></sp-products-page>
+  <router-outlet></router-outlet>
 </div>
