--- a/src/app/menu/menu-top/menu-top.component.html
+++ b/src/app/menu/menu-top/menu-top.component.html
@@ -8,5 +8,10 @@
     <li class="nav-item">
       <a class="nav-link" [routerLink]="['/products/add']" [routerLinkActive]="['active']">Create product</a>
     </li>
+
+    <li class="nav-item">
+      <a class="nav-link" [routerLink]="['/auth/register']" [routerLinkActive]="['active']">Register</a>
+    </li>
+
   </ul>
 </nav>
