--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,4 +1,11 @@
-<form action="#" id="form-register" class="mt-4" method="POST" role="form">
+<form
+  action="#"
+  (ngSubmit)="register()"
+  id="form-register"
+  class="mt-4"
+  role="form"
+  #prodForm="ngForm"
+>
   <legend>Create an account</legend>
 
   <div class="form-group">
@@ -12,7 +19,6 @@
       [(ngModel)]="newUser.name"
       required
       #nombreModel="ngModel"
-
       [ngClass]="{
         'is-valid': nombreModel.touched && nombreModel.valid,
         'is-invalid': nombreModel.touched && nombreModel.invalid
@@ -59,11 +65,18 @@
       placeholder="Email"
       [(ngModel)]="repeatemail"
       #emailRepeatModel="ngModel"
+      required
       [ngClass]="{
         'is-valid': emailRepeatModel.touched && emailRepeatModel.valid,
         'is-invalid': emailRepeatModel.touched && emailRepeatModel.invalid
       }"
     />
+    <div
+      class="invalid-feedback"
+      *ngIf="emailRepeatModel.errors && emailRepeatModel.errors.required"
+    >
+      Email confirmation is required
+    </div>
   </div>
   <div class="form-group">
     <label for="password">Password:</label>
@@ -82,6 +95,23 @@
         'is-invalid': passwordModel.touched && passwordModel.invalid
       }"
     />
+    <div
+      class="invalid-feedback"
+      *ngIf="passwordModel.errors && passwordModel.errors.required"
+    >
+      Password is required
+    </div>
+    <div
+      class="invalid-feedback"
+      *ngIf="passwordModel.errors && passwordModel.errors.minlength"
+    >
+      Add at least
+      {{
+        passwordModel.errors.minlength.requiredLength -
+          passwordModel.errors.minlength.actualLength
+      }}
+      characters
+    </div>
   </div>
   <div class="form-row">
     <div class="form-group col">
@@ -128,7 +158,7 @@
     />
     <div class="invalid-feedback">Photo is required</div>
   </div>
-  <img [src]="newUser.photo" alt="" id="imgPreview" />
+  <img [src]="newUser.photo" alt="" id="imgPreview" class="img-thumbnail" />
   <a class="btn btn-secondary" href="login.html" role="button">Go back</a>
-  <button type="submit" class="btn btn-primary">Create account</button>
+  <button type="submit" class="btn btn-primary" [disabled]="prodForm.invalid">Create account</button>
 </form>
