--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -159,6 +159,6 @@
     <div class="invalid-feedback">Photo is required</div>
   </div>
   <img [src]="newUser.photo" alt="" id="imgPreview" class="img-thumbnail" />
-  <a class="btn btn-secondary" href="login.html" role="button">Go back</a>
+  <a class="btn btn-secondary" [routerLink]="['/auth/login']" role="button">Go back</a>
   <button type="submit" class="btn btn-primary" [disabled]="prodForm.invalid">Create account</button>
 </form>
