--- a/src/app/menu/menu-top/menu-top.component.html
+++ b/src/app/menu/menu-top/menu-top.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">SanviPop</a>
+  <a class="navbar-brand" [routerLink]="['/products']">SanviPop</a>
   <ul class="navbar-nav mr-auto">
     <li class="nav-item">
       <a class="nav-link" [routerLink]="['/products']" [routerLinkActive]="['active']"
