--- a/src/app/products/product-card/product-card.component.html
+++ b/src/app/products/product-card/product-card.component.html
@@ -1,3 +1,48 @@
+<a [routerLink]="['/products',product.id]"><img class="card-img-top" [src]="product.photos"></a>
+<div class="card-body">
+    <h5 class="card-title"><a [routerLink]="['/products',product.id]" [innerText]="product.title"></a></h5>
+    <p class="card-text">{{product.description}}</p>
+    <div class="row text-muted">
+        <div class="col-auto">cantegory-name</div>
+        <div class="col text-muted text-right">
+            {{product.price}} €
+        </div>
+    </div>
+</div>
+<!--
+<div class="card-footer bg-transparent">
+    <div class="row">
+        <div class="col-auto avatar pl-1 pr-1">
+            <a [routerLink]="['/profile',product.id]">
+                <img src="{{owner.photo}}" class="rounded-circle">
+            </a>
+        </div>
+        <div class="col">
+            <div class="name">
+                <a href="profile.html?id={{owner.id}}">
+                    {{owner.name}}
+                </a>
+            </div>
+            <div><small class="text-muted">{{datePublished}}</small></div>
+        </div>
+
+        <div class="col-auto" *ngIf="product.mine">
+            <button class="btn btn-outline-danger btn-sm"><i class="fas fa-trash-alt"></i></button>
+        </div>
+
+        <div class="col-auto">
+            <div class="text-muted text-right">
+                <small>{{product.numVisits}} <i class="far fa-eye"></i></small>
+            </div>
+            <div class="text-right text-muted">
+                <small>{{product.distance}} <i>km</i></small>
+            </div>
+        </div>
+    </div>
+</div>
+-->
+
+
 <a [routerLink]="['/products', product.id]">
   <img class="card-img-top" [src]="product.mainPhoto">
 </a>
