--- a/src/app/products/product-card/product-card.component.html
+++ b/src/app/products/product-card/product-card.component.html
@@ -13,7 +13,7 @@
 <div class="card-footer bg-transparent">
     <div class="row">
         <div class="col-auto avatar pl-1 pr-1">
-            <a [routerLink]="['/users',owner.id]">
+            <a [routerLink]="['/users', owner.id]">
                 <img [src]="owner.photo" class="rounded-circle">
             </a>
         </div>
@@ -27,7 +27,7 @@
         </div>
 
         <div class="col-auto" *ngIf="product.mine">
-            <button class="btn btn-outline-danger btn-sm"><i class="fas fa-trash-alt"></i></button>
+            <button class="btn btn-outline-danger btn-sm" (click)="deleteProduct()"><i class="fas fa-trash-alt"></i></button>
         </div>
 
         <div class="col-auto">
