--- a/src/app/users/profile/profile.component.html
+++ b/src/app/users/profile/profile.component.html
@@ -1,1 +1,14 @@
-<p>profile works!</p>
+<div class="col-3">
+  <img class="w-100" id="avatar" [src]="user.photo" alt="">
+</div>
+<div class="col-9">
+  <h4>{{user.name}}</h4>
+  <h4>
+      <small class="text-muted">{{user.email}}</small>
+  </h4>
+
+  <p *ngIf="user.me" >
+      <a [routerLink]="['/users/me']" class="btn btn-primary">Edit profile</a>
+  </p>
+
+</div>
