--- a/src/app/menu/menu-top/menu-top.component.html
+++ b/src/app/menu/menu-top/menu-top.component.html
@@ -12,6 +12,9 @@
     <li class="nav-item">
       <a class="nav-link" [routerLink]="['/auth/register']" [routerLinkActive]="['active']">Register</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link"  [routerLink]="['/auth/login']" [routerLinkActive]="['active']">Login</a>
+    </li>
 
   </ul>
 </nav>
