Creo la parte del perfil del usuario

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <form
     action="#"
-
+    (ngSubmit)="login()"
     id="form-login"
     class="mt-4"
     method="POST"
