--- a/src/app/users/useredit/useredit.component.html
+++ b/src/app/users/useredit/useredit.component.html
@@ -1,6 +1,24 @@
-<form class="mt-4" method="POST" role="form" #userForm="ngForm">
-  <legend>Edit profile</legend>
+<swal icon="success" title="{{title}}" #updateProfileSwal>
+  <ng-container *swalPortal="swalTargets.content">
+    {{message}}
+  </ng-container>
+</swal>
 
+
+
+<swal icon="error" title="{{title}}" #errorSwal>
+  <ng-container *swalPortal="swalTargets.content">
+    {{message}}
+  </ng-container>
+</swal>
+<form
+  class="mt-4"
+  (ngSubmit)="updateProfile()"
+  method="POST"
+  role="form"
+  #userForm="ngForm"
+>
+  <legend>Edit profile</legend>
   <div class="form-group">
     <label for="correo">Email:</label>
     <input
@@ -23,7 +41,13 @@
   </div>
   <button type="submit" class="btn btn-primary">Edit profile</button>
 </form>
-<form action="#" id="form-photo" class="mt-4" method="POST" role="form">
+<form
+  (ngSubmit)="updatePhoto(imgPreview)"
+  class="mt-4"
+  method="POST"
+  role="form"
+  #userPhoto="ngForm"
+>
   <legend>Edit photo</legend>
 
   <div class="form-group">
@@ -32,17 +56,17 @@
       class="form-control"
       id="image"
       #fileImage
-      (change)="changeImage(fileImage,imgPreview)"
+      (change)="changeImage(fileImage, imgPreview)"
       name="image"
       [(ngModel)]="photoFile"
     />
   </div>
   <div class="row">
-    <div class="col" class="w-100">
-      <img class="w-100" id="photo" [src]="user.photo" alt="" />
+    <div class="col">
+      <img class="imgwidth" id="photo" [src]="user.photo" alt="" />
     </div>
     <div class="col">
-      <img class="d-none w-100" #imgPreview src="" alt="" id="imgPreview" />
+      <img class="d-none imgwidth" #imgPreview src="" alt="" id="imgPreview" />
     </div>
   </div>
   <p class="text-danger" id="errorInfo2"></p>
@@ -50,7 +74,7 @@
 
   <button type="submit" class="btn btn-primary">Edit photo</button>
 </form>
-<form action="#" id="form-password" class="mt-4" method="POST" role="form">
+<form action="#" (ngSubmit)="updatePassword()" id="form-password" class="mt-4" method="POST" role="form"  #userPassword="ngForm">
   <legend>Edit password</legend>
 
   <div class="form-group">
