Redirijo a una url donde se muestra el perfil y depiendiendo si es el que se ha logueado ira a /me o /users/id

--- a/src/app/products/product-card/product-card.component.html
+++ b/src/app/products/product-card/product-card.component.html
@@ -23,7 +23,10 @@
     </div>
     <div class="col">
       <div class="name">
-        <a [routerLink]="['/users', owner.id]">
+        <a *ngIf="product.mine" [routerLink]="['/users/me']">
+          {{ owner.name }}
+        </a>
+        <a *ngIf="!product.mine" [routerLink]="['/users',owner.id]">
           {{ owner.name }}
         </a>
       </div>
