--- a/src/app/menu/menu-top/menu-top.component.html
+++ b/src/app/menu/menu-top/menu-top.component.html
@@ -2,19 +2,27 @@
   <a class="navbar-brand" [routerLink]="['/products']">SanviPop</a>
   <ul class="navbar-nav mr-auto">
     <li class="nav-item">
-      <a class="nav-link" [routerLink]="['/products']" [routerLinkActive]="['active']"
+      <a class="nav-link" *ngIf="login" [routerLink]="['/products']" [routerLinkActive]="['active']"
         [routerLinkActiveOptions]="{exact: true}">Home</a>
     </li>
-    <li class="nav-item">
+    <li class="nav-item" *ngIf="login">
       <a class="nav-link" [routerLink]="['/products/add']" [routerLinkActive]="['active']">Create product</a>
     </li>
-
     <li class="nav-item">
-      <a class="nav-link" [routerLink]="['/auth/register']" [routerLinkActive]="['active']">Register</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link"  [routerLink]="['/auth/login']" [routerLinkActive]="['active']">Login</a>
+      <a class="nav-link" *ngIf="login" [routerLink]="['/users/me']" [routerLinkActive]="['active']">My profile</a>
     </li>
 
+  </ul>
+
+  <ul class="navbar-nav ml-auto">
+    <li class="nav-item">
+      <a class="nav-link" *ngIf="!login" [routerLink]="['/auth/login']" [routerLinkActive]="['active']">Login</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" *ngIf="login" [routerLink]="['/auth/login']" [routerLinkActive]="['active']">Logout</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" *ngIf="!login" [routerLink]="['/auth/register']" [routerLinkActive]="['active']">Register</a>
+    </li>
   </ul>
 </nav>
