--- a/src/app/products/product-card/product-card.component.html
+++ b/src/app/products/product-card/product-card.component.html
@@ -21,6 +21,10 @@
     <div class="col text-muted text-right">
       {{ product.price | currency: "EUR" }}
     </div>
+
+    <p>
+      {{payedMessage}}
+    </p>
   </div>
 </div>
 
