--- a/src/app/users/useredit/useredit.component.html
+++ b/src/app/users/useredit/useredit.component.html
@@ -1,10 +1,10 @@
-<swal icon="success" title="{{title}}" #updateProfileSwal>
+<swal icon="success" title="Update" #updateProfileSwal>
   <ng-container *swalPortal="swalTargets.content">
     {{message}}
   </ng-container>
 </swal>
 
-<swal icon="error" title="{{title}}" #errorSwal>
+<swal icon="error" title="Erro" #errorSwal>
   <ng-container *swalPortal="swalTargets.content">
     {{message}}
   </ng-container>
