--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,3 +1,8 @@
+<swal icon="error" title="Error" #errorSwal>
+  <ng-container *swalPortal="swalTargets.content">
+    {{ message }}
+  </ng-container>
+</swal>
 <form
   action="#"
   (ngSubmit)="register()"
@@ -120,6 +125,7 @@
         type="text"
         class="form-control"
         id="lat"
+        spPositiveValue
         name="lat"
         [(ngModel)]="newUser.lat"
         placeholder="Geolocating..."
@@ -133,6 +139,7 @@
         class="form-control"
         id="lng"
         name="lng"
+        spPositiveValue
         [(ngModel)]="newUser.lng"
         placeholder="Geolocating..."
         readonly
@@ -159,6 +166,10 @@
     <div class="invalid-feedback">Photo is required</div>
   </div>
   <img [src]="newUser.photo" alt="" id="imgPreview" class="img-thumbnail" />
-  <a class="btn btn-secondary" [routerLink]="['/auth/login']" role="button">Go back</a>
-  <button type="submit" class="btn btn-primary" [disabled]="prodForm.invalid">Create account</button>
+  <a class="btn btn-secondary" [routerLink]="['/auth/login']" role="button"
+    >Go back</a
+  >
+  <button type="submit" class="btn btn-primary" [disabled]="prodForm.invalid">
+    Create account
+  </button>
 </form>
