Creo con sweetalert la pregunta si desea salir de la pagina de añadir producto o editarlo sin guardar cambios

--- a/src/app/products/product-card/product-card.component.html
+++ b/src/app/products/product-card/product-card.component.html
@@ -54,7 +54,7 @@
         #deleteSwal
         title="Are you sure to delete this product?"
         text="This cannot be undone"
-        icon="question"
+        icon="warning"
         [showCancelButton]="true"
         [focusCancel]="true"
         (confirm)="deleteProduct()"
