Empiezo a implmentar la opcion de añadir a favorito

--- a/src/app/users/profile/profile.component.html
+++ b/src/app/users/profile/profile.component.html
@@ -37,7 +37,9 @@
             <sp-product-card
               class="card shadow"
               [product]="product"
-              *ngFor="let product of productsBoughts"
+              (deleted)="deleteProduct(product)"
+
+              *ngFor="let product of productsSolds"
 
             >
             </sp-product-card>
