--- a/src/app/products/product-card/product-card.component.html
+++ b/src/app/products/product-card/product-card.component.html
@@ -9,15 +9,15 @@
 /></a>
 <div class="card-body">
   <div class="row">
-    <h5 class="col-11 card-title">
+    <h5 class="col-10 card-title">
       <a
         [routerLink]="['/products', product.id]"
         [innerText]="product.title"
       ></a>
     </h5>
 
-    <button *ngIf="!product.mine" type="button" class="col-1 btn btn-outline-warning btn-sm">
-      <i class="fas fa-heart"></i>
+    <button *ngIf="!product.mine" type="button" (click)="addFavorite(start)" class="col-2 btn btn-lg fav">
+      <i class="far fa-heart" #start></i>
     </button>
   </div>
 
