Borro la card bien desde mi peorfil

--- a/src/app/users/profile/profile.component.html
+++ b/src/app/users/profile/profile.component.html
@@ -20,6 +20,7 @@
             <sp-product-card
               class="card shadow"
               [product]="product"
+              (deleted)="deleteProduct(product)"
               *ngFor="let product of myProducts"
             >
             </sp-product-card>
