--- a/src/app/products/product-detail/product-detail.component.css
+++ b/src/app/products/product-detail/product-detail.component.css
@@ -2,7 +2,9 @@ mgl-map {
   height: 400px;
 }
 
-.center{
+.buy{
 
-  text-align: center;
+  margin-left: 450px;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
