Tengo añadida la opcion de añadir más foto a un producto y se puede también borrar

--- a/src/app/products/product-card/product-card.component.html
+++ b/src/app/products/product-card/product-card.component.html
@@ -11,7 +11,7 @@
     </h5>
 
     <button
-      *ngIf="!product.mine"
+      *ngIf="!product.mine && product.status!=3"
       type="button"
       (click)="changeFavorite(start)"
       class="col-2 btn btn-lg fav"
