--- a/src/app/products/photosproduct/photosproduct.component.html
+++ b/src/app/products/photosproduct/photosproduct.component.html
@@ -1,1 +1,55 @@
-<p>photosproduct works!</p>
+<form class="mt-4" (ngSubmit)="addPhoto()" #prodForm="ngForm">
+  <div class="form-group">
+    <label for="image">Photo</label>
+    <input
+      type="file"
+      class="form-control"
+      id="image"
+      name="image"
+      #fileImage
+      (change)="changeImage(fileImage)"
+      [(ngModel)]="photoFile"
+      required
+      #photoModel="ngModel"
+      [ngClass]="{
+        'is-valid': photoModel.touched && photoModel.valid,
+        'is-invalid': photoModel.touched && photoModel.invalid
+      }"
+    />
+    <img [src]="photo" class="img-thumbnail" />
+  </div>
+  <div class="row">
+    <div class="col-auto">
+      <button
+        type="submit"
+        class="btn btn-primary btn-lg"
+        [disabled]="prodForm.invalid"
+      >
+        Create
+      </button>
+    </div>
+  </div>
+</form>
+
+<div class="card-columns mt-4 mb-4">
+  <div class="card shadow">
+    <img class="card-img-top" [src]="product.mainPhoto"/>
+    <h3 class="text-center mt-2">Main photo</h3>
+  </div>
+  <div class="card" *ngFor="let photo of product.photos">
+    <img class="card-img-top" [src]="photo.url"/>
+    <div class="card-footer bg-transparent">
+      <div class="row">
+        <button class="btn btn-outline-primary btn-md mr-2" (click)="updateMainPhoto(photo)">
+          <i class="fas fa-home"></i>
+        </button>
+        <button class="btn btn-outline-danger btn-md" (click)="deletePhoto(photo)">
+          <i class="fas fa-trash-alt"></i>
+        </button>
+
+      </div>
+    </div>
+  </div>
+
+
+</div>
