--- a/src/app/products/product-form/product-form.component.html
+++ b/src/app/products/product-form/product-form.component.html
@@ -1,6 +1,6 @@
 <swal icon="warning" title="Save change" [showCancelButton]="true" #errorSwal>
   <ng-container *swalPortal="swalTargets.content">
-     Are you sure you want to leave this page?. Changes will be lost...
+    Are you sure you want to leave this page?. Changes will be lost...
   </ng-container>
 </swal>
 
@@ -134,12 +134,18 @@
 
   <div class="row">
     <div class="col-auto">
+      <a
+        class="btn btn-success btn-lg mr-2"
+        *ngIf="productRecive"
+        [routerLink]="['/products', productRecive.id, 'photos']"
+        >Photos</a
+      >
       <button
         type="submit"
         class="btn btn-primary btn-lg"
         [disabled]="prodForm.invalid"
       >
-        Create
+        Save
       </button>
     </div>
   </div>
